; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_setattr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_setattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfs_attr = type { i32 }

@EROFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vfs_setattr(i32 %0, %struct.vfs_attr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.vfs_attr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.vfs_attr* %1, %struct.vfs_attr** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @vfs_isrdonly(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @EROFS, align 4
  store i32 %13, i32* %4, align 4
  br label %20

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.vfs_attr*, %struct.vfs_attr** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @VFS_SETATTR(i32 %15, %struct.vfs_attr* %16, i32 %17)
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %14, %12
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i64 @vfs_isrdonly(i32) #1

declare dso_local i32 @VFS_SETATTR(i32, %struct.vfs_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
